--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -1,3 +1,10 @@
+<!--/**
+ * Name: David Sims
+ * Student Number: 301268408
+ * Project: Comp229 Midterm Project
+ * FileName: COMP220-F2023-MIDTERM-301268408
+ */
+-->
 <% include ../partials/header.ejs %>
 
     <!-- MAIN CONTENT -->
